--- a/Projects/Multithreading_Exceptionhandling/.gitignore
+++ b/Projects/Multithreading_Exceptionhandling/.gitignore
@@ -6,3 +6,8 @@
 /Syncingthreads.class
 /trycatch.class
 /keywordtrycatchfinally.class
+/Exceptionhandling.class
+/Exceptionhandling1.class
+/classandobjects.class
+/Polymorphism.class
+/Inheritance.class
