--- a/Projects/DAY 1 programs/.gitignore
+++ b/Projects/DAY 1 programs/.gitignore
@@ -9,3 +9,11 @@
 /METHODS.class
 /REGULAR_EXPRESSIONS.class
 /STRING.class
+/AccessSpecifier1.class
+/AcsessSpecifier2.class
+/defaultspecifier.class
+/privatespecifier.class
+/privatspecifier11.class
+/protectedspecifier.class
+/publicspecifier.class
+/typecastingchallenge.class
